# symbiont_transmission

./: .gitattributes  .gitignore  parameter_sets.json  pixi.toml  plot.py
data/: circles.csv  duplex.csv  russell_2020_vars.csv  shared.csv
notebooks/: plots.ipynb
random_forest/: pe.py  pe_nb.py  plot_empirical_vs_test.py  rf.py
results/model_output/: af_bins.npy  config.csv  feature_importance.csv  hyperparameters.csv  metadata.csv  metrics.csv  search_results.csv  test_predictions.csv
scripts/: aggregate.py  depth_cdf.py  fit.py  params.py  plot.py  rf.py
simulator/: Cargo.toml
simulator/data/: circles_depth_cdf.json  duplex_depth_cdf.json
simulator/src/: main.rs
simulator/tests/: depths.bed  main.rs
workflow/: Snakefile
workflow/scripts/: plot.py
