[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
factorial = "0.4.0"
log = "0.4.25"
num-bigint = "0.4.6"
ordered-float = "5.0.0"
phylotree = "0.1.3"
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_distr = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
statrs = "0.18.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
